// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns template with links to sections without outputType 1`] = `
{
  "urlset": {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "url": [
      {
        "changefreq": "",
        "loc": "http://demo-prod.origin.arcpublishing.com/politics/",
        "priority": "",
      },
      {
        "changefreq": "",
        "loc": "http://demo-prod.origin.arcpublishing.com/opinion/",
        "priority": "",
      },
      {
        "changefreq": "",
        "loc": "http://demo-prod.origin.arcpublishing.com/economy/",
        "priority": "",
      },
      {
        "changefreq": "",
        "loc": "http://demo-prod.origin.arcpublishing.com/sports/",
        "priority": "",
      },
      {
        "changefreq": "",
        "loc": "http://demo-prod.origin.arcpublishing.com/sports/football/",
        "priority": "",
      },
      {
        "changefreq": "",
        "loc": "http://demo-prod.origin.arcpublishing.com/sports/baseball/",
        "priority": "",
      },
      {
        "changefreq": "",
        "loc": "http://demo-prod.origin.arcpublishing.com/sports/basketball/",
        "priority": "",
      },
      {
        "changefreq": "",
        "loc": "http://demo-prod.origin.arcpublishing.com/entertainment/",
        "priority": "",
      },
      {
        "changefreq": "",
        "loc": "http://demo-prod.origin.arcpublishing.com/entertainment/tv/",
        "priority": "",
      },
      {
        "changefreq": "",
        "loc": "http://demo-prod.origin.arcpublishing.com/entertainment/movies/",
        "priority": "",
      },
    ],
  },
}
`;

exports[`returns template with sitemap by section links 1`] = `
{
  "urlset": {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "url": [
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/politics/",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/opinion/",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/economy/",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/sports/",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/sports/football/",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/sports/baseball/",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/sports/basketball/",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/entertainment/",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/entertainment/tv/",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/entertainment/movies/",
        "priority": "0.5",
      },
    ],
  },
}
`;

exports[`returns template with sitemap by section links with excluded links 1`] = `
{
  "urlset": {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "url": [
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/opinion/?outputType=xml",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/economy/?outputType=xml",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/sports/?outputType=xml",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/sports/football/?outputType=xml",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/sports/baseball/?outputType=xml",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/sports/basketball/?outputType=xml",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/entertainment/?outputType=xml",
        "priority": "0.5",
      },
      {
        "changefreq": "always",
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/entertainment/movies/?outputType=xml",
        "priority": "0.5",
      },
    ],
  },
}
`;

exports[`returns template without priority or change frequency 1`] = `
{
  "urlset": {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "url": [
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/politics/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/opinion/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/economy/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/sports/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/sports/football/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/sports/baseball/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/sports/basketball/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/entertainment/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/entertainment/tv/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/category/entertainment/movies/?outputType=xml",
      },
    ],
  },
}
`;
